# VTech-MobiGo2-Reverse-Engineering-Dump

./: .gitignore  README.md  download_mobigo_system_files.py  mobigo_proto.py  mobigo_vendor_bridge.py  pyproject.toml  write_mobigo_one.ps1
misc/: 00000071.log.txt  Logfile.PML  MBA.md  UB_33333333_to_00000000.MBA  UB_33333333_to_00000000.write.log.txt  a.pcapng  dump_mobigo_flash_retry.ps1  dump_mobigo_known_fs.ps1  dump_mobigo_one.ps1  dump_mobigo_tree.ps1  inferred_A_tree.json  inferred_A_tree.txt  live_A_tree.json  live_A_tree.txt  manual_probe_after_reboot_00000009.PHO  mobigo_flash_dump_20260314_205641.log.txt  patch_a_lcdinv_poc.ps1  unsp_instruction_summary.txt  unsp_payload.asm  unsp_payload.lst  unsp_probe.asm  unsp_probe.lst  unsp_programmers_guide_head.txt  write_mobigo_one.ps1
misc/live_fs_dump_resume/: _dump_log.txt
misc/live_fs_dump_run1/: _dump_log.txt
misc/live_fs_dump_run2/: _dump_log.txt
misc/live_fs_dump_run3/: _dump_log.txt
misc/live_fs_dump_run4/: _dump_log.txt
misc/mobigo_re/: .gitignore  README.md  mobigo_cli.py  mobigo_vendor_bridge.py  pyproject.toml
misc/mobigo_re/artifacts/: README.md
misc/mobigo_re/docs/: capture-reconstruction.md  flash-analysis.md  homebrew-status.md
misc/mobigo_re/native/: mobigo_ls_helper.cs
misc/mobigo_re/tools/: analyze_capture.py  build_mm_usb_visual_poc.py  build_ub_asset_swap_poc.py  build_ub_shift_poc.py  build_ub_widget_poc.py  build_usb_text_patch.py  extract_fat_from_flash.py  infer_tree_from_pcaps.py  mba_tool.py  mgb_patch.py  probe_dirs.py  unsp_tools.py
native/: mobigo_ls_helper.cs
(+102 files in other folders)
