[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mobigo-re"
version = "0.1.0"
description = "Reverse engineering notes and tooling for the VTech MobiGo USB transport"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scapy>=2.5.0",
]

[project.optional-dependencies]
windows = [
    "pywin32>=306",
]

[tool.setuptools]
py-modules = [
    "mobigo_cli",
    "mobigo_proto",
    "mobigo_vendor_bridge",
]

[project.scripts]
mobigo-cli = "mobigo_cli:main"

